Sun Jan 31 03:33:33 GMT 2010  Colin Watson  <cjwatson@debian.org>

	Upgrade to Automake 1.11.1 and Gnulib 20100109.

Thu Jan 14 11:51:59 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* src/whatis.c (search): "%s: nothing appropriate." is an error;
	  write it to stderr, not stdout (Debian bug #565255).

Wed Jan 13 23:42:00 GMT 2010  Werner Fink  <werner@suse.de>

	Add support for using socketpair(2) as a replacement for pipe(2),
	which is faster on some systems (Savannah patch #6741).

	* configure.ac: Add --enable-socketpair-pipe option.
	* m4/man-socketpair.m4: New file.
	* lib/pipeline.c [USE_SOCKETPAIR_PIPE]: Redefine pipe() to a
	  construction based on socketpair().
	* NEWS: Document this.

Wed Jan 13 22:04:23 GMT 2010  Colin Watson  <cjwatson@debian.org>

	Upgrade to Autoconf 2.65 and Gnulib 20091120.

Wed Jan 13 18:26:47 GMT 2010  Diego Pettenò  <flameeyes@gentoo.org>

	Add support for heirloom-doctools (Savannah patch #6933).

	* configure.ac: Substitute TROFF.
	* manual/Makefile.am (.pp.dvi, .pp.ps, .pp.tdvi, .pp.html): Use
	  $(TROFF) rather than groff or troff.
	* src/man.c (options, parse_opt): Just ignore the --warnings option
	  when troff is not groff, rather than compiling it out entirely.
	  (make_roff_command): Only use gxditview variable when troff is
	  groff.
	* NEWS: Document this.

Tue Jan 12 13:33:51 GMT 2010  Samuel Thibault  <sthibault@debian.org>

	* lib/pipeline.c (pipeline_pump): Fix off-by-one error when write
	  returns EAGAIN (Debian bug #564818).

Fri Jan  1 17:03:18 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* README (Copyright and licensing): Update copyright years.

Fri Jan  1 13:26:21 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* src/manconv.c (try_iconv): Only handle iconv errors when iconv
	  returned -1.

Fri Jan  1 11:37:13 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* src/manconv.c (try_iconv): Handle iconv errors when attempting to
	  convert the last input encoding to UTF-8 (Debian bug #562503).