@@ -1,3 +1,8 @@
+Sun Jan 31 03:44:59 GMT 2010  Colin Watson  <cjwatson@debian.org>
+
+	* src/manconv.c (try_iconv): Don't lose iconv errors from converting
+	  to UTF-8 when the target encoding is not UTF-8.
+
 Sun Jan 31 03:33:33 GMT 2010  Colin Watson  <cjwatson@debian.org>
 
 	Upgrade to Automake 1.11.1 and Gnulib 20100109.
